apps/monitoring/mqtt-exporter/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mqtt-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mqtt-exporter
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-automation
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mosquitto
      ports:
        - port: 8443
          protocol: TCP
    # Kube-DNS
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
